name of agent (build-type) for failed test can be too long, css fix

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -78,3 +78,8 @@
 .branches {
     padding-left: 16px;
 }
+
+.single_problem {
+    white-space:nowrap;
+    overflow: hidden;
+}
